--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.7.0
+APScheduler==3.10.4
 attrs==25.4.0
 blinker==1.9.0
 cachetools==5.5.2
@@ -38,6 +39,7 @@ numpy==2.2.0
 packaging==24.2
 pandas==2.2.3
 pillow==11.3.0
+plotly==5.24.1
 proto-plus==1.26.1
 protobuf==5.29.5
 pyarrow==22.0.0
@@ -53,6 +55,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.2
 PyYAML==6.0.3
+qrcode==8.0
 referencing==0.37.0
 requests==2.32.3
 rich==13.9.4
@@ -70,6 +73,7 @@ tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.12.2
 tzdata==2025.2
+tzlocal==5.3.1
 uritemplate==4.2.0
 urllib3==2.6.0
 uvicorn==0.32.1
